--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-scripts": "3.4.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
-    "styled-components": "^5.1.0"
+    "styled-components": "^5.1.0",
+    "typescript": "^3.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
